--- a/config/PSUtilities.cnf
+++ b/config/PSUtilities.cnf
@@ -3,5 +3,5 @@ allowedReadPaths	C:\\wm6\\test*C:\\wm6\\test.txt*C:\\temp\\read*c:\\temp\\write*
 allowedDeletePaths C:\\wm6\\test*C:\\wm6\\test.txt
 allowedCommands	property1*cmd.exe /c dir*property3
 allowedServices	pub.flow:debugLog*service2*Test.JDBC:testExplicitLOCALNOMix*Test.JDBC:testExplicitLOCALNOMix_2
-allowedFromEmails	employee@somecompany.com*test@test.com
+allowedFromEmails	admin@superipaas.com
 maxSleep	60000
